--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@dhis2/cli-style": "^10.1.2"
   },
   "dependencies": {
-    "@dhis2/app-runtime": "^3.3.0",
-    "fuse.js": "^6.5.3"
+    "@dhis2/app-runtime": "^3.3.4",
+    "bao-react-components": "^2.3.9",
+    "fuse.js": "^6.5.3",
+    "react-router-dom": "^5.2.0"
   }
 }
