feat: add refresh logic and update of the mapping and data store

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dhis2/app-runtime": "^3.4.4",
     "bao-react-components": "^2.3.9",
     "fuse.js": "^6.5.3",
+    "lodash": "^4.17.21",
     "react-router-dom": "^5.2.0"
   }
 }
